<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2018 [jasonandy@hotmail.com | https://github.com/Jasonandy]
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License”);
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
-->
<resources>

    <!-- app name -->
    <string name="app_name">佛系小吴</string>

    <!-- You are what you want to be. -->
    <string name="yr_wt">You are what you want to be. - wb</string>

    <!-- action_settings -->
    <string name="action_settings">设置</string>

    <!-- about 关于 -->
    <string name="aboutText">\n
        项目简介：一个佛系的高中物理老师的App\n
        项目地址：https://github.com/Jasonandy \n
        作 者：佛系小吴\n
    </string>

    <!-- Click 点击 -->
    <string name="btn_click">Click</string>

    <!-- 发送短信 -->
    <string name="to_send">NOW.SEND.SMS</string>
    <string name="show_tip">SHOW.ME</string>
    <string name="cacu_tip">CACULATOR</string>

    <!-- setting -->
    <string name="setting_about">About</string>
    <string name="setting_contact">联系人</string>
    <string name="setting_version">版本</string>
    <string name="setting_author">作者</string>

    <!-- 常见的String -->
    <string name="up">向上</string>
    <string name="down">向下</string>
    <string name="left">向左</string>
    <string name="right">向右</string>
    <string name="space"></string>

    <string name="exit">退出</string>
    <string name="about_me">关于</string>

    <string name="title_activity_view">ViewActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>

    <!-- SMS 相关 -->
    <string name="title_activity_test">Show</string>
    <string name="title_activity_sms">短信发送</string>
    <string name="sms_send">Send SMS</string>
    <string name="to_coll_activity">CoolActivity</string>
    <string name="to_roll_activity">RollActivity</string>
    <string name="to_destory_activity">销毁活动</string>

    <!-- 计算相关 -->
    <string name="title_activity_caculator">简易计算器</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_cac_resut">计算结果</string>
    <string name="sysmblo">乘以</string>


    <!-- 微信第三面板使用 -->
    <string name="friendcacl">朋友圈</string>
    <string name="saoyisao">扫一扫</string>
    <string name="yaoyiyao">摇一摇</string>
    <string name="aroundperson">附近的人</string>
    <string name="piaoping">漂流瓶</string>
    <string name="shop">购物</string>
    <string name="game">游戏</string>
    <string name="title_activity_cool_view">CoolViewActivity</string>
    <string name="title_activity_rolling_text">RollingTextActivity</string>


</resources>
