<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="cn.ucaner.MainActivity" > <!-- MainActivity  -->

    <!-- item  -->
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="12"
        android:showAsAction="never"
        android:title="@string/action_settings"/> <!--  设置 -->
        
      <item
        android:id="@+id/action_settings_aa"
        android:orderInCategory="2"
        android:showAsAction="never"
        android:title="@string/setting_about"
        android:icon="@color/white"
     />
      
    <!-- 作者 -->
     <item
        android:id="@+id/action_settings_bb"
        android:orderInCategory="3"
        android:showAsAction="never"
        android:title="@string/setting_author"
        android:icon="@color/white"
     />
     
     <!-- 版本号 -->
	 <item
	   android:id="@+id/action_settings_cc"
	   android:orderInCategory="4"
	   android:showAsAction="never"
	   android:title="@string/setting_version"
	   android:icon="@color/white"
	/>
      
	<!--联系人  -->
	  <item
	   android:id="@+id/action_settings_dd"
	   android:orderInCategory="5"
	   android:showAsAction="never"
	   android:title="@string/setting_contact"
	   android:icon="@color/white"
	/>

</menu>
