<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2018 [jasonandy@hotmail.com | https://github.com/Jasonandy]
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License”);
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="cn.ucaner.fun.ProfileActivity" >

    <!-- action_settings  -->
    <item
        android:id="@+id/action_settings_a"
        android:orderInCategory="1"
        android:showAsAction="never"
        android:title="@string/action_settings"
        android:icon="@color/gray"
     />
    
    <!-- 作者 -->
     <item
        android:id="@+id/action_settings_b"
        android:orderInCategory="2"
        android:showAsAction="never"
        android:title="@string/setting_author"
        android:icon="@color/gray"
     />
     
     <!-- 版本号 -->
	 <item
	   android:id="@+id/action_settings_c"
	   android:orderInCategory="3"
	   android:showAsAction="never"
	   android:title="@string/setting_version"
	   android:icon="@color/gray"
	/>
      
	<!--联系人  -->
	  <item
	   android:id="@+id/action_settings_d"
	   android:orderInCategory="4"
	   android:showAsAction="never"
	   android:title="@string/setting_contact"
	   android:icon="@color/gray"
	/>
    
</menu>