<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2018 [jasonandy@hotmail.com | https://github.com/Jasonandy]
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License”);
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
              android:fitsSystemWindows="true"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              tools:context="cn.ucaner.SmsActivity">

    <!--  android:text="@string/sms_send"    -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
    />
    
    
    <!-- 发送短信的按钮 -->
    <Button 
        android:id="@+id/sendSmsBtn"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
        android:text="@string/sms_send" 
    />

    <!-- 获取验证码 -->
    <cc.ibooker.zcountdownviewlib.SingleCountDownView
            android:id="@+id/singleCountDownView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingStart="15dp"
            android:textColor="#ed1752"
            android:textSize="13sp" />

    <TextView
            android:id="@+id/countDownView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
    />

    <!-- 跳转到activity -->
    <Button
            android:id="@+id/toCoolBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_coll_activity"
    />

    <!-- 跳转到activity -->
    <Button
            android:id="@+id/toRollTextBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_roll_activity"
    />

    <!-- destoryBtn -->
    <Button
            android:id="@+id/destoryActivityBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_destory_activity"
    />

    <!--browserBtn-->
    <Button
            android:id="@+id/browserBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="browser"
    />

    <!--browserBtn-->
    <Button
            android:id="@+id/start_normal_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SatrtNormal"
    />

    <!--browserBtn-->
    <Button
            android:id="@+id/start_dialog_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="StartDialog"
    />


</LinearLayout>
